[gd_scene load_steps=6 format=3 uid="uid://crboxa4c7vkj1"]

[ext_resource type="Texture2D" uid="uid://bmalybikwu6en" path="res://Resources/Sprites/UI_TravelBook_FrameSelect01b.png" id="1_cf33y"]
[ext_resource type="Texture2D" uid="uid://cnqg1f24ugiaf" path="res://Resources/Sprites/UI_TravelBook_GamepadA01a.png" id="2_th34o"]
[ext_resource type="Script" uid="uid://ctopv5niq87gf" path="res://Scripts/guild_ranking_label.gd" id="2_vxnop"]
[ext_resource type="FontFile" uid="uid://b1s1rbc2pq2bd" path="res://Resources/Fonts/Berry Rotunda.ttf" id="3_vxnop"]
[ext_resource type="FontFile" uid="uid://0qjiky5fnp8b" path="res://Resources/Fonts/Dumbledor.ttf" id="5_rldey"]

[node name="GuildRankingLabel" type="TextureRect"]
custom_minimum_size = Vector2(0, 50)
offset_right = 493.0
offset_bottom = 56.0
texture = ExtResource("1_cf33y")
script = ExtResource("2_vxnop")

[node name="GuildIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 37.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_th34o")

[node name="GuildName" type="Label" parent="."]
self_modulate = Color(0.286275, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 74.0
offset_top = 11.0
offset_right = 268.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("3_vxnop")
text = "White Guild"
vertical_alignment = 1
autowrap_mode = 2

[node name="RepLabel" type="Label" parent="."]
self_modulate = Color(0.286275, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 266.0
offset_top = 14.0
offset_right = 466.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("5_rldey")
theme_override_font_sizes/font_size = 25
text = " 10000 Reputation"
horizontal_alignment = 2
vertical_alignment = 1
